--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -21,17 +21,17 @@
 - name: check products loaded or not
   ansible.builtin.command: mongosh --host {{ MONGODB_HOST }} --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
   register: catalogue_output
-  ignore_errors: true
+  # ignore_errors: true
 
 - name: printing catalogue output
   ansible.builtin.debug:
     msg: "{{ catalogue_output }}"
-  ignore_errors: true
+  # ignore_errors: true
 
 - name: loading data
   ansible.builtin.shell: mongosh --host {{ MONGODB_HOST }} </app/db/master-data.js
   when: catalogue_output.stdout | int < 0
-  ignore_errors: true
+  # ignore_errors: true
 
 - name: systemd service
   include_role:
